refactor: rename project to 'sigil' with Chinese branding
Update package name, class names, and documentation to reflect new branding as '云篆 (sigil)'. Includes CLI program name change and consistent branding across all files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "font-api"
+name = "sigil"
 version = "0.1.0"
-description = "Add your description here"
+description = "云篆 (sigil): Export characters from a font to SVG, with optional Chinese practice grids and Hanyu Pinyin"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
